# Day_Dream

./: .gitignore  AGENTS.MD  AI_MIRROR_QUICKSTART.md  ARCHITECTURE.md  CNAME  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL_LIST.md  LICENSE  PHASE_0_COMPLETE.md  PHASE_1_PROGRESS.md  README.md  README_GEMMA3.md  SECURITY.md  SETUP.md  agent.md  android_build_log.txt  android_build_log_2.txt  android_error.txt  build_errors.txt  build_log.txt  build_log_capture.txt  build_release.ps1  check2.txt  check_log_4.txt  check_log_5.txt  check_log_6.txt  check_log_7.txt  conflict_log.txt  docker-compose.yml  final_check.txt  fix_element_child.ps1  fix_imports.ps1  frontend-5ea07f14a03c4873.js  frontend-5ea07f14a03c4873_bg.wasm  frontend-7701bb09d4bfb3fb.js  frontend-7701bb09d4bfb3fb_bg.wasm  frontend-a114367650365a79.js  (+17 more)
.cascade_checkpoints/: ROADMAP_TWO_SITE.md  SESSION_2026-05-29_EVENING.md
.github/workflows/: deploy_pages.yml  deploy_playdaydream.yml  gh-pages-deploy.yml
.sqlx/: query-989ece9ce7552007afe666583caa5012a018ec6ec9833b6dbd14361dec0474e5.json  query-c2f4ed98a0fd0c436c80f0dfe5e525f97c36baa073a90130d32e48fd0217a3a3.json  query-d89b58f5e87fcafbe8626f730f192f2fb7351e9a713480e737beb8eb436dfbf7.json  query-e5d0c3bca0477c44d10659ced645fdc3a288a506c8bc8478de31a89e467df7c7.json
backend/: .env.example  Cargo.toml  build_log.txt  build_log_backend.txt  check_output.txt  check_output_2.txt  check_output_3.txt  errors_full.txt
backend/assets/dialogue/: demo.yarn  reflection_quest.yarn
backend/migrations/: 001_create_conversation_turns.sql  20251114154450_initial_schema.sql  20251114161006_vaam_schema.sql  20251114162238_persona_engine_schema.sql  20251119123129_vaam_schema_update.sql  20251120035630_create_reflection_entries_table.sql  20251125011236_create_story_graphs_table.sql  20251127_train_yard_schema.sql  20251128_add_weight_to_vocabulary.sql  20251128_create_telemetry_table.sql  20251128_create_vocabulary_bank.sql  20251128_hybrid_ai_schema.sql  20251129_create_student_miles.sql
backend/src/: error.rs  main.rs  state.rs  static_assets.rs
backend/src/ai/: conversation_memory.rs  embedding.rs  mod.rs  socratic_engine.rs  tests.rs
backend/src/ai/llm/: gemini_client.rs  gemma_engine.rs  gemma_server.rs  llama_engine.rs  mod.rs
backend/src/ai/prompts/: mod.rs
backend/src/antigravity/: mod.rs
backend/src/core/: mod.rs  signals.rs
backend/src/domain/: content_loader.rs  game_logic.rs  mod.rs  persona_logic.rs  player.rs  railway.rs  reflection_model.rs  vaam.rs
backend/src/game/: components.rs  systems.rs
backend/src/handlers/: ai.rs  ai_mirror.rs  expert.rs  knowledge.rs  mod.rs  persona.rs  player.rs  recharge.rs  research.rs  simulation.rs  telemetry.rs  vaam.rs  weigh_station.rs
backend/src/handlers/handlers/: persona.rs  vaam.rs
backend/src/models/: narrative.rs
backend/src/narrative/: mod.rs
backend/src/routes/: ai.rs  ai_mirror.rs  debug.rs  expert.rs  knowledge.rs  mod.rs  persona.rs  pete.rs  player.rs  recharge.rs  research.rs  simulation.rs  vaam.rs  weigh_station_routes.rs
backend/src/services/: mod.rs  model_manager.rs  notebook_lm.rs  weigh_station.rs
backend/src/trinity_extension/: mod.rs
common/: Cargo.toml
common/src/: economy.rs  expert.rs  legacy.rs  lib.rs  quests.json  reflection.rs  vocabulary.json
common/src/ai/: mod.rs
common/src/db/: mod.rs
common/src/mobile/: bridge.rs
common/src/models/: mod.rs
common/src/physics/: mod.rs
common/srcs/: quests.json
content/characters/: bolt.json  klex.json  mama_willow.json  pip_quickwit.json  shelldon.json  totem.json
content/quests/: Q_B1_FAULTY_FOUNTAIN.json  Q_K1_TASTING_THE_AETHER.json  Q_P1_SIZING_UP_THE_MARK.json  Q_S1_ESTABLISHING_PRESENCE.json  (+2 more)
docs/: DAYDREAM_HANDBOOK.md  GEMMA_128K_CONFIGURATION.md  MODEL_DOWNLOAD.md  SESSION_TURNOVER.md  cognitive_load_framework.md  vision_document.md
engine/: Cargo.toml
engine/arcana/: builder.py  classifier.py  comfyui_client.py  curriculum.json  forge.py  prompts.py
engine/src/: components.rs  dag.rs  deck.rs  input.rs  main.rs  render.rs
frontend/: Cargo.toml  DESIGN_SYSTEM.md  build_log.txt  check_log.txt  check_log_2.txt  check_log_3.txt  frontend_error.txt  index.html  tailwind.config.js
frontend/src/: api.rs  app.rs  lib.rs  main.rs  models.rs  server_functions.rs
frontend/src/ai/: gemma_agent.rs  mod.rs
frontend/src/components/: ai_mirror_chat.rs  artifact_card.rs  design_process.rs  dispatcher_console.rs  ethical_legal.rs  formative_eval.rs  fuel_gauge.rs  getting_started_modal.rs  glass_panel.rs  help_panel.rs  learner_analysis.rs  loading_spinner.rs  message_suggestions.rs  mod.rs  motivational_design.rs  onboarding.rs  persistent_ui.rs  persona_quiz.rs  reflection_form.rs  systems_thinking.rs  tech_analysis.rs  tech_skills.rs  theoretical_synthesis.rs  tooltip.rs  tutorial_overlay.rs  visual_design.rs  weigh_station.rs
frontend/src/components/authoring/: inspector.rs  mod.rs  node_canvas.rs  property_editor.rs  story_node.rs  template_selector.rs
frontend/src/pages/: ask_pete.rs  authoring.rs  daydream.rs  design.rs  engine_cab_layout.rs  evaluation.rs  foundations.rs  home.rs  knowledge_library.rs  mod.rs  not_found.rs  pearl_setup.rs  planning.rs  research_dashboard.rs  systems_thinking.rs  train_yard_layout.rs  weigh_station.rs
frontend/srcs/components/: persona_quiz.rs
frontend/srcsrc/: server_functions.rs
frontend/style/: input.css
playdaydream/: index.html  package-lock.json  package.json  vite.config.js
prototype/: index.html
scripts/: deploy_mvp.sh  dev_launch.sh  dev_setup.sh  test_expert_module.sh  test_phase_0.sh  test_phase_1.sh
src/: lib.rs  main.rs  models.rs
src-tauri/: Cargo.toml  ai_error.txt  build_error.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_error_5.txt  build_error_6.txt  build_error_final.txt  db_error.txt  error_inline.txt  stub_error.txt  sync_error.txt  sync_error_2.txt  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/sync/: mod.rs
(+38 files in other folders)
