[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main serialization library, used by everything
serde = { version = "1.0", features = ["derive"] }

# Used by our static loaders to parse the .json files
serde_json = "1.0"

# Used for `Lazy::new` to load static data once
once_cell = "1.19"

# --- IMPROVEMENT ---
# We add the `leptos` dependency here with the "serde" feature.
# This allows our shared data (like `GameTurn` and `PlayerCharacter`)
# to be serialized/deserialized by Leptos's server functions
# and API helpers.
leptos = { version = "0.6.9", features = ["serde"] }
bevy_ecs = { version = "0.14", optional = true }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
], optional = true }
chrono = { version = "0.4.31", features = ["serde"], optional = true }


[features]
ssr = ["leptos/ssr", "bevy_ecs", "sqlx", "chrono"]
