[package]
name = "daydream-engine"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Daydream: A DAG-graph meaning-making engine where words are entities and stories are journeys."

[dependencies]
# Game Engine — Bevy 0.18 with 2D profile (sprites, text, UI, picking)
bevy = { version = "0.18", default-features = false, features = ["2d"] }

# Serialization (for word DAG loading)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific: for WebLLM JS interop later
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
