[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Framework - Pinned to 0.8.12 for stability
leptos = { version = "0.8.0-rc3" }
leptos_router = { version = "0.8.0-rc3" }
leptos_meta = { version = "0.8.0-rc3" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.93"
gloo-net = "0.5"
serde_json = "1.0"
common = { path = "../common" }
web-sys = { version = "0.3", features = ["MouseEvent", "Element", "SvgElement", "DomRect"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Server-Side Rendering (SSR) Dependencies
[dependencies.axum]
version = "0.8.7"
optional = true

[dependencies.leptos_axum]
version = "0.8.0-rc3"
optional = true

[dependencies.tokio]
version = "1.37"
features = ["full"]
optional = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Fixes WASM runtime error by using browser's JS-based randomness source
getrandom = { version = "0.2", features = ["js"] }
