[package]
name = "ask_pete_frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Framework - Pinned to 0.8.12 for stability
leptos = { version = "0.8.0-rc3", features = ["nightly", "csr"] }
leptos_router = { version = "0.8.0-rc3" }
leptos_meta = { version = "0.8.0-rc3" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.93"
gloo-net = "0.5"
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }
common = { path = "../common" }
web-sys = { version = "0.3", features = [
    "MouseEvent", "Element", "SvgElement", "DomRect", "HtmlFormElement", "FormData", "Event",
    # WebGPU Support for Client-Side AI
    "console", "Window", "Performance", "Gpu", "GpuDevice", "GpuAdapter", "GpuQueue", 
    "GpuBuffer", "GpuCommandEncoder", "GpuComputePipeline", "GpuBindGroup", "GpuBindGroupLayout",
    "GpuPipelineLayout", "GpuShaderModule", "Navigator", "Storage"
] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen-futures = "0.4"
uuid = { version = "=1.13.1", features = ["v4", "serde", "js"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
byteorder = "1.5.0"
js-sys = "0.3"
anyhow = "1.0"

# AI Dependencies - Using custom WASM tokenizer
candle-core = { version = "0.8.0", features = [] }
candle-nn = "0.8.0"
candle-transformers = { version = "0.8.0", features = [] } # Tried "gemma" but might not exist, sticking to default for now
# tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
rand = { version = "0.8", features = ["small_rng"] }

# Server-Side Rendering (SSR) Dependencies
[dependencies.axum]
version = "0.7"
optional = true

[dependencies.leptos_axum]
version = "0.8.0-rc3"
optional = true

[dependencies.tokio]
version = "1.37"
features = ["full"]
optional = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Fixes WASM runtime error by using browser's JS-based randomness source
getrandom = { version = "=0.2.16", features = ["js"] }
half = "=2.4.1"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[[bin]]
name = "frontend_bin"
path = "src/main.rs"
